parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> Start
Rule 1     Start -> Program
Rule 2     Program -> Program GlobalDecl
Rule 3     Program -> <empty>
Rule 4     GlobalDecl -> FuncDecl
Rule 5     GlobalDecl -> VarDecl SEMI
Rule 6     FuncDecl -> FuncHead FuncBody
Rule 7     FuncHead -> Type FuncName LPAREN newScope Args RPAREN
Rule 8     FuncBody -> LBRACE Stmts RBRACE
Rule 9     newScope -> <empty>
Rule 10    FuncName -> ID
Rule 11    Args -> Arg
Rule 12    Args -> <empty>
Rule 13    Type -> INT
Rule 14    Type -> CHAR
Rule 15    Type -> VOID
Rule 16    Arg -> Type ID
Rule 17    Arg -> Arg COMMA Type ID
Rule 18    VarDeclStmt -> VarDecl SEMI
Rule 19    VarDecl -> Type ID
Rule 20    VarDecl -> VarDecl COMMA ID
Rule 21    Stmts -> Stmts Stmt
Rule 22    Stmts -> <empty>
Rule 23    Stmt -> AssignStmt
Rule 24    Stmt -> PrintStmt
Rule 25    Stmt -> CallStmt
Rule 26    Stmt -> ReturnStmt
Rule 27    Stmt -> IfStmt
Rule 28    Stmt -> WhileStmt
Rule 29    Stmt -> BreakStmt
Rule 30    Stmt -> ContinueStmt
Rule 31    Stmt -> VarDeclStmt
Rule 32    AssignStmt -> ID ASSIGN Expr SEMI
Rule 33    PrintStmt -> PRINT LPAREN Actuals RPAREN SEMI
Rule 34    PActuals -> PActuals COMMA Expr
Rule 35    PActuals -> <empty>
Rule 36    CallStmt -> CallExpr SEMI
Rule 37    CallExpr -> ID LPAREN Actuals RPAREN
Rule 38    Actuals -> Expr PActuals
Rule 39    Actuals -> <empty>
Rule 40    ReturnStmt -> RETURN Expr SEMI
Rule 41    ReturnStmt -> RETURN SEMI
Rule 42    IfStmt -> If TestExpr Then StmtsBlock EndThen EndIf
Rule 43    IfStmt -> If TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf
Rule 44    TestExpr -> LPAREN Expr RPAREN
Rule 45    StmtsBlock -> LBRACE newScope Stmts RBRACE
Rule 46    If -> IF
Rule 47    Else -> ELSE
Rule 48    Then -> <empty>
Rule 49    EndThen -> <empty>
Rule 50    EndIf -> <empty>
Rule 51    WhileStmt -> While TestExpr Do StmtsBlock EndWhile
Rule 52    While -> WHILE
Rule 53    Do -> <empty>
Rule 54    EndWhile -> <empty>
Rule 55    BreakStmt -> BREAK SEMI
Rule 56    ContinueStmt -> CONTINUE SEMI
Rule 57    Expr -> Expr PLUS Expr
Rule 58    Expr -> Expr MINUS Expr
Rule 59    Expr -> Expr TIMES Expr
Rule 60    Expr -> Expr DIVIDE Expr
Rule 61    Expr -> Expr LSHIFT Expr
Rule 62    Expr -> Expr RSHIFT Expr
Rule 63    Expr -> Expr LT Expr
Rule 64    Expr -> Expr GT Expr
Rule 65    Expr -> Expr EQ Expr
Rule 66    Expr -> Expr NE Expr
Rule 67    Expr -> Expr LE Expr
Rule 68    Expr -> Expr GE Expr
Rule 69    Expr -> Expr OR Expr
Rule 70    Expr -> Expr AND Expr
Rule 71    Expr -> NOT Expr
Rule 72    Expr -> MINUS Expr
Rule 73    Expr -> NUMBER
Rule 74    Expr -> LPAREN Expr RPAREN
Rule 75    Expr -> CallExpr
Rule 76    Expr -> ID

Terminals, with rules where they appear

AND                  : 70
ASSIGN               : 32
BREAK                : 55
CHAR                 : 14
COMMA                : 17 20 34
COMMENT              : 
CONTINUE             : 56
DIVIDE               : 60
ELSE                 : 47
EQ                   : 65
GE                   : 68
GT                   : 64
ID                   : 10 16 17 19 20 32 37 76
IF                   : 46
INT                  : 13
LBRACE               : 8 45
LE                   : 67
LPAREN               : 7 33 37 44 74
LSHIFT               : 61
LT                   : 63
MINUS                : 58 72
NE                   : 66
NOT                  : 71
NUMBER               : 73
OR                   : 69
PLUS                 : 57
PRINT                : 33
RBRACE               : 8 45
RETURN               : 40 41
RPAREN               : 7 33 37 44 74
RSHIFT               : 62
SEMI                 : 5 18 32 33 36 40 41 55 56
TIMES                : 59
VOID                 : 15
WHILE                : 52
error                : 

Nonterminals, with rules where they appear

Actuals              : 33 37
Arg                  : 11 17
Args                 : 7
AssignStmt           : 23
BreakStmt            : 29
CallExpr             : 36 75
CallStmt             : 25
ContinueStmt         : 30
Do                   : 51
Else                 : 43
EndIf                : 42 43
EndThen              : 42 43
EndWhile             : 51
Expr                 : 32 34 38 40 44 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 72 74
FuncBody             : 6
FuncDecl             : 4
FuncHead             : 6
FuncName             : 7
GlobalDecl           : 2
If                   : 42 43
IfStmt               : 27
PActuals             : 34 38
PrintStmt            : 24
Program              : 1 2
ReturnStmt           : 26
Start                : 0
Stmt                 : 21
Stmts                : 8 21 45
StmtsBlock           : 42 43 43 51
TestExpr             : 42 43 51
Then                 : 42 43
Type                 : 7 16 17 19
VarDecl              : 5 18 20
VarDeclStmt          : 31
While                : 51
WhileStmt            : 28
newScope             : 7 45

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . Program
    (2) Program -> . Program GlobalDecl
    (3) Program -> .

    INT             reduce using rule 3 (Program -> .)
    CHAR            reduce using rule 3 (Program -> .)
    VOID            reduce using rule 3 (Program -> .)
    $end            reduce using rule 3 (Program -> .)

    Start                          shift and go to state 1
    Program                        shift and go to state 2

state 1

    (0) S' -> Start .



state 2

    (1) Start -> Program .
    (2) Program -> Program . GlobalDecl
    (4) GlobalDecl -> . FuncDecl
    (5) GlobalDecl -> . VarDecl SEMI
    (6) FuncDecl -> . FuncHead FuncBody
    (19) VarDecl -> . Type ID
    (20) VarDecl -> . VarDecl COMMA ID
    (7) FuncHead -> . Type FuncName LPAREN newScope Args RPAREN
    (13) Type -> . INT
    (14) Type -> . CHAR
    (15) Type -> . VOID

    $end            reduce using rule 1 (Start -> Program .)
    INT             shift and go to state 8
    CHAR            shift and go to state 9
    VOID            shift and go to state 10

    GlobalDecl                     shift and go to state 3
    FuncDecl                       shift and go to state 4
    VarDecl                        shift and go to state 5
    FuncHead                       shift and go to state 6
    Type                           shift and go to state 7

state 3

    (2) Program -> Program GlobalDecl .

    INT             reduce using rule 2 (Program -> Program GlobalDecl .)
    CHAR            reduce using rule 2 (Program -> Program GlobalDecl .)
    VOID            reduce using rule 2 (Program -> Program GlobalDecl .)
    $end            reduce using rule 2 (Program -> Program GlobalDecl .)


state 4

    (4) GlobalDecl -> FuncDecl .

    INT             reduce using rule 4 (GlobalDecl -> FuncDecl .)
    CHAR            reduce using rule 4 (GlobalDecl -> FuncDecl .)
    VOID            reduce using rule 4 (GlobalDecl -> FuncDecl .)
    $end            reduce using rule 4 (GlobalDecl -> FuncDecl .)


state 5

    (5) GlobalDecl -> VarDecl . SEMI
    (20) VarDecl -> VarDecl . COMMA ID

    SEMI            shift and go to state 11
    COMMA           shift and go to state 12


state 6

    (6) FuncDecl -> FuncHead . FuncBody
    (8) FuncBody -> . LBRACE Stmts RBRACE

    LBRACE          shift and go to state 14

    FuncBody                       shift and go to state 13

state 7

    (19) VarDecl -> Type . ID
    (7) FuncHead -> Type . FuncName LPAREN newScope Args RPAREN
    (10) FuncName -> . ID

    ID              shift and go to state 15

    FuncName                       shift and go to state 16

state 8

    (13) Type -> INT .

    ID              reduce using rule 13 (Type -> INT .)


state 9

    (14) Type -> CHAR .

    ID              reduce using rule 14 (Type -> CHAR .)


state 10

    (15) Type -> VOID .

    ID              reduce using rule 15 (Type -> VOID .)


state 11

    (5) GlobalDecl -> VarDecl SEMI .

    INT             reduce using rule 5 (GlobalDecl -> VarDecl SEMI .)
    CHAR            reduce using rule 5 (GlobalDecl -> VarDecl SEMI .)
    VOID            reduce using rule 5 (GlobalDecl -> VarDecl SEMI .)
    $end            reduce using rule 5 (GlobalDecl -> VarDecl SEMI .)


state 12

    (20) VarDecl -> VarDecl COMMA . ID

    ID              shift and go to state 17


state 13

    (6) FuncDecl -> FuncHead FuncBody .

    INT             reduce using rule 6 (FuncDecl -> FuncHead FuncBody .)
    CHAR            reduce using rule 6 (FuncDecl -> FuncHead FuncBody .)
    VOID            reduce using rule 6 (FuncDecl -> FuncHead FuncBody .)
    $end            reduce using rule 6 (FuncDecl -> FuncHead FuncBody .)


state 14

    (8) FuncBody -> LBRACE . Stmts RBRACE
    (21) Stmts -> . Stmts Stmt
    (22) Stmts -> .

    RBRACE          reduce using rule 22 (Stmts -> .)
    ID              reduce using rule 22 (Stmts -> .)
    PRINT           reduce using rule 22 (Stmts -> .)
    RETURN          reduce using rule 22 (Stmts -> .)
    BREAK           reduce using rule 22 (Stmts -> .)
    CONTINUE        reduce using rule 22 (Stmts -> .)
    IF              reduce using rule 22 (Stmts -> .)
    WHILE           reduce using rule 22 (Stmts -> .)
    INT             reduce using rule 22 (Stmts -> .)
    CHAR            reduce using rule 22 (Stmts -> .)
    VOID            reduce using rule 22 (Stmts -> .)

    Stmts                          shift and go to state 18

state 15

    (19) VarDecl -> Type ID .
    (10) FuncName -> ID .

    SEMI            reduce using rule 19 (VarDecl -> Type ID .)
    COMMA           reduce using rule 19 (VarDecl -> Type ID .)
    LPAREN          reduce using rule 10 (FuncName -> ID .)


state 16

    (7) FuncHead -> Type FuncName . LPAREN newScope Args RPAREN

    LPAREN          shift and go to state 19


state 17

    (20) VarDecl -> VarDecl COMMA ID .

    SEMI            reduce using rule 20 (VarDecl -> VarDecl COMMA ID .)
    COMMA           reduce using rule 20 (VarDecl -> VarDecl COMMA ID .)


state 18

    (8) FuncBody -> LBRACE Stmts . RBRACE
    (21) Stmts -> Stmts . Stmt
    (23) Stmt -> . AssignStmt
    (24) Stmt -> . PrintStmt
    (25) Stmt -> . CallStmt
    (26) Stmt -> . ReturnStmt
    (27) Stmt -> . IfStmt
    (28) Stmt -> . WhileStmt
    (29) Stmt -> . BreakStmt
    (30) Stmt -> . ContinueStmt
    (31) Stmt -> . VarDeclStmt
    (32) AssignStmt -> . ID ASSIGN Expr SEMI
    (33) PrintStmt -> . PRINT LPAREN Actuals RPAREN SEMI
    (36) CallStmt -> . CallExpr SEMI
    (40) ReturnStmt -> . RETURN Expr SEMI
    (41) ReturnStmt -> . RETURN SEMI
    (42) IfStmt -> . If TestExpr Then StmtsBlock EndThen EndIf
    (43) IfStmt -> . If TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf
    (51) WhileStmt -> . While TestExpr Do StmtsBlock EndWhile
    (55) BreakStmt -> . BREAK SEMI
    (56) ContinueStmt -> . CONTINUE SEMI
    (18) VarDeclStmt -> . VarDecl SEMI
    (37) CallExpr -> . ID LPAREN Actuals RPAREN
    (46) If -> . IF
    (52) While -> . WHILE
    (19) VarDecl -> . Type ID
    (20) VarDecl -> . VarDecl COMMA ID
    (13) Type -> . INT
    (14) Type -> . CHAR
    (15) Type -> . VOID

    RBRACE          shift and go to state 20
    ID              shift and go to state 31
    PRINT           shift and go to state 32
    RETURN          shift and go to state 34
    BREAK           shift and go to state 37
    CONTINUE        shift and go to state 38
    IF              shift and go to state 40
    WHILE           shift and go to state 41
    INT             shift and go to state 8
    CHAR            shift and go to state 9
    VOID            shift and go to state 10

    Stmt                           shift and go to state 21
    AssignStmt                     shift and go to state 22
    PrintStmt                      shift and go to state 23
    CallStmt                       shift and go to state 24
    ReturnStmt                     shift and go to state 25
    IfStmt                         shift and go to state 26
    WhileStmt                      shift and go to state 27
    BreakStmt                      shift and go to state 28
    ContinueStmt                   shift and go to state 29
    VarDeclStmt                    shift and go to state 30
    CallExpr                       shift and go to state 33
    If                             shift and go to state 35
    While                          shift and go to state 36
    VarDecl                        shift and go to state 39
    Type                           shift and go to state 42

state 19

    (7) FuncHead -> Type FuncName LPAREN . newScope Args RPAREN
    (9) newScope -> .

    INT             reduce using rule 9 (newScope -> .)
    CHAR            reduce using rule 9 (newScope -> .)
    VOID            reduce using rule 9 (newScope -> .)
    RPAREN          reduce using rule 9 (newScope -> .)

    newScope                       shift and go to state 43

state 20

    (8) FuncBody -> LBRACE Stmts RBRACE .

    INT             reduce using rule 8 (FuncBody -> LBRACE Stmts RBRACE .)
    CHAR            reduce using rule 8 (FuncBody -> LBRACE Stmts RBRACE .)
    VOID            reduce using rule 8 (FuncBody -> LBRACE Stmts RBRACE .)
    $end            reduce using rule 8 (FuncBody -> LBRACE Stmts RBRACE .)


state 21

    (21) Stmts -> Stmts Stmt .

    RBRACE          reduce using rule 21 (Stmts -> Stmts Stmt .)
    ID              reduce using rule 21 (Stmts -> Stmts Stmt .)
    PRINT           reduce using rule 21 (Stmts -> Stmts Stmt .)
    RETURN          reduce using rule 21 (Stmts -> Stmts Stmt .)
    BREAK           reduce using rule 21 (Stmts -> Stmts Stmt .)
    CONTINUE        reduce using rule 21 (Stmts -> Stmts Stmt .)
    IF              reduce using rule 21 (Stmts -> Stmts Stmt .)
    WHILE           reduce using rule 21 (Stmts -> Stmts Stmt .)
    INT             reduce using rule 21 (Stmts -> Stmts Stmt .)
    CHAR            reduce using rule 21 (Stmts -> Stmts Stmt .)
    VOID            reduce using rule 21 (Stmts -> Stmts Stmt .)


state 22

    (23) Stmt -> AssignStmt .

    RBRACE          reduce using rule 23 (Stmt -> AssignStmt .)
    ID              reduce using rule 23 (Stmt -> AssignStmt .)
    PRINT           reduce using rule 23 (Stmt -> AssignStmt .)
    RETURN          reduce using rule 23 (Stmt -> AssignStmt .)
    BREAK           reduce using rule 23 (Stmt -> AssignStmt .)
    CONTINUE        reduce using rule 23 (Stmt -> AssignStmt .)
    IF              reduce using rule 23 (Stmt -> AssignStmt .)
    WHILE           reduce using rule 23 (Stmt -> AssignStmt .)
    INT             reduce using rule 23 (Stmt -> AssignStmt .)
    CHAR            reduce using rule 23 (Stmt -> AssignStmt .)
    VOID            reduce using rule 23 (Stmt -> AssignStmt .)


state 23

    (24) Stmt -> PrintStmt .

    RBRACE          reduce using rule 24 (Stmt -> PrintStmt .)
    ID              reduce using rule 24 (Stmt -> PrintStmt .)
    PRINT           reduce using rule 24 (Stmt -> PrintStmt .)
    RETURN          reduce using rule 24 (Stmt -> PrintStmt .)
    BREAK           reduce using rule 24 (Stmt -> PrintStmt .)
    CONTINUE        reduce using rule 24 (Stmt -> PrintStmt .)
    IF              reduce using rule 24 (Stmt -> PrintStmt .)
    WHILE           reduce using rule 24 (Stmt -> PrintStmt .)
    INT             reduce using rule 24 (Stmt -> PrintStmt .)
    CHAR            reduce using rule 24 (Stmt -> PrintStmt .)
    VOID            reduce using rule 24 (Stmt -> PrintStmt .)


state 24

    (25) Stmt -> CallStmt .

    RBRACE          reduce using rule 25 (Stmt -> CallStmt .)
    ID              reduce using rule 25 (Stmt -> CallStmt .)
    PRINT           reduce using rule 25 (Stmt -> CallStmt .)
    RETURN          reduce using rule 25 (Stmt -> CallStmt .)
    BREAK           reduce using rule 25 (Stmt -> CallStmt .)
    CONTINUE        reduce using rule 25 (Stmt -> CallStmt .)
    IF              reduce using rule 25 (Stmt -> CallStmt .)
    WHILE           reduce using rule 25 (Stmt -> CallStmt .)
    INT             reduce using rule 25 (Stmt -> CallStmt .)
    CHAR            reduce using rule 25 (Stmt -> CallStmt .)
    VOID            reduce using rule 25 (Stmt -> CallStmt .)


state 25

    (26) Stmt -> ReturnStmt .
